[hotfix] Fixes horizontal scrollbar

--- a/src/customizations/container/_container.scss
+++ b/src/customizations/container/_container.scss
@@ -153,6 +153,10 @@
         }
     }
 
+    &--noscroll {
+        overflow: hidden;
+    }
+
     &--breadcrumbs {
         background-image: url( 'images/breadcrumbs.png' );
         background-size: auto 4.8rem;
